# ece1724_rust_project

./: .gitignore  doc.md  proposal.md  readme.md  test.rs  todo.md  todos.md
chat_client/: Cargo.toml  index.html
chat_client/src/: db.rs  lib.rs  main.rs  model.rs  msg.rs  registration_page.rs  route.rs  view.rs
chat_client2/src/: main.rs  view.rs
chat_client22222/: index.html
chat_client22222/src/: main.rs
chat_server/: Cargo.toml  server.db  todos.md
chat_server/src/: chat.rs  db.rs  group.rs  jwt.rs  main.rs  user.rs  ws.rs
chat_server/src/chat/: chat_server.rs  connection_actor.rs  messages.rs  routes.rs
chat_server/test/: api_test.py  chat_test.py  login.sh  setup.bash
online_chat_app/: Cargo.toml
