[package]
name = "chat_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "console"] }
log = "0.4"
gloo-timers = "0.2"

[dev-dependencies]
trunk = "0.16"

