[package]
name = "chat_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "chat_client_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chat_client_bin"
path = "src/main.rs"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "console"] }
log = "0.4"
gloo-timers = "0.2"
wasm-logger = "0.2.0"

[dev-dependencies]
trunk = "0.16"

