[package]
name = "yew-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Document"] }
wasm-logger = "0.2"
log = "0.4"
eframe = "0.24"
reqwasm = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
gloo = { version = "0.9", features = ["net", "timers"] }
futures-util = "0.3"
